# egl-mri-utils

./: .gitignore  README.md  pyproject.toml
src/egl_mri_utils/: __init__.py  citfti_manipulations.py  dense_cifti_connectivity.py  nifti.py  paths.py
tests/: test_package.py
