[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egl-mri-utils"
version = "0.1.0"
description = "Small neuroimaging utility library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nibabel>=5.2",
  "numpy>=1.26",
]
license = { text = "MIT" }
authors = [
  { name = "EGL" },
]
keywords = ["mri", "neuroimaging", "nifti", "utilities"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
egl_mri_utils = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
